# stt2tts-mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml
stt2tts_mcp/: __init__.py  server.py
stt2tts_mcp/engines/: __init__.py
stt2tts_mcp/engines/stt/: __init__.py  base.py  faster_whisper.py  lmstudio.py  ollama.py  openai_api.py  sherpa_onnx.py
stt2tts_mcp/engines/tts/: __init__.py  base.py  coqui.py  kokoro.py  lmstudio.py  ollama.py  openai_api.py  piper.py
stt2tts_mcp/security/: __init__.py  audit.py  errors.py  guards.py  rate_limit.py  validation.py
stt2tts_mcp/utils/: __init__.py  audio.py  config.py
tests/: test_config_loader.py  test_mcp_2_0_compatibility.py  test_mcp_integration.py  test_piper_no_json.py  test_security_audit.py  test_security_errors.py  test_security_guards.py  test_security_rate_limit.py  test_security_validation.py
