[project]
name = "stt2tts-mcp"
version = "0.1.0"
description = "MCP server for STT and TTS with hot-swappable engines"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Adarsh", email = "adarsh@lastcrown.in" }
]
keywords = ["mcp", "mcp-server", "stt", "tts", "speech-to-text", "text-to-speech", "whisper", "piper", "kokoro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "soundfile>=0.12",
    "scipy>=1.12",
    "mcp>=1.0.0",
    "requests>=2.31",
]

[project.optional-dependencies]
stt-faster-whisper = [
    "faster-whisper>=1.0.0",
]
stt-sherpa = [
    "sherpa-onnx>=1.10.0",
]
stt-openai = [
    "openai>=1.0.0",
]
tts-piper = [
    "piper-tts>=1.0.0",
]
tts-kokoro = [
    "kokoro-onnx>=0.7.0",
    "onnxruntime>=1.18.0",
]
tts-coqui = [
    "TTS>=1.0.0",
]
all = [
    "faster-whisper>=1.0.0",
    "sherpa-onnx>=1.10.0",
    "openai>=1.0.0",
    "piper-tts>=1.0.0",
    "kokoro-onnx>=0.7.0",
    "onnxruntime>=1.18.0",
    "TTS>=1.0.0",
]

[project.scripts]
stt2tts-mcp = "stt2tts_mcp.server:main"

[project.urls]
Homepage = "https://github.com/pygodzilla/stt2tts-mcp"
Repository = "https://github.com/pygodzilla/stt2tts-mcp"
Issues = "https://github.com/pygodzilla/stt2tts-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stt2tts_mcp"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
